# billfrogai

./: INSTALLATION.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  test_package.py
billfrog/: __init__.py  cli.py  config.py
billfrog/ai_providers/: __init__.py  openai_provider.py
billfrog/email/: __init__.py  sender.py
billfrog/receipts/: __init__.py  generator.py
billfrog/scheduler/: __init__.py  task_scheduler.py
billfrog/storage/: __init__.py  database.py
examples/: basic_usage.py  custom_receipt.py  supabase_setup.md
